# aerial_terrestrial_registration

./: .flake8  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
config/: optimization-evo-exp01.yaml  optimization-evo-exp02.yaml  optimization-evo-exp06.yaml  optimization-evo-exp10.yaml  optimization-sar-exp03.yaml  optimization-sar-exp04.yaml  optimization-steim-c1.yaml  optimization-steim-d2.yaml  optimization-steim-m1.yaml  optimization-steim-m2.yaml  optimization-steim-m3.yaml  optimization-steim-m5.yaml  optimization.yaml  registration-evo-exp01.yaml  registration-evo-exp02.yaml  registration-evo-exp06.yaml  registration-evo-exp07.yaml  registration-evo-exp10.yaml  registration-evo-tiles-exp01.yaml  registration-payload-map-exp01.yaml  registration-pipeline-example-dataset.yaml  registration-steim-c1.yaml  registration-steim-d2.yaml  registration-steim-exp03.yaml  registration-steim-exp04.yaml  registration-steim-exp07.yaml  registration-steim-m1.yaml  registration-steim-m2.yaml  registration-steim-m3.yaml  registration-steim-m5.yaml  registration-steim-tiles-exp04.yaml  registration.yaml
config/legacy/: optimization-evo-exp01.yaml  optimization-evo-exp10.yaml  optimization-sar-exp03.yaml  optimization-sar-exp04.yaml  optimization-steim-m1.yaml  optimization.yaml  registration-evo-exp01.yaml  registration-evo-exp02.yaml  registration-evo-exp06.yaml  registration-evo-tiles-exp01.yaml  registration-evo-tiles-exp02.yaml  registration-payload-map-exp01.yaml  registration-steim-d2.yaml  registration-steim-exp03.yaml  registration-steim-exp07.yaml  registration-steim-m1.yaml  registration-steim-m2.yaml  registration-steim-m3.yaml  registration-steim-m5.yaml
data/test_evo/: bls_pts.txt  uav_pts.txt
data/test_sar/: bls_pts.txt  uav_pts.txt
scripts/: gui.py  main.py  optimization.py  registration.py  tiling.py
scripts/results/: compare_results.py  density_analysis.py  density_analysis_voxels.py  results_summary.py
src/aerial_terrestrial_registration/: optimization.py  registration_gui.py  registration_script.py  tiling.py
src/aerial_terrestrial_registration/gui/: image_viewer.py  log_tree_widget.py  main_window.py  optimization_dialog.py  optimization_pipeline_worker.py  registration_dialog.py  registration_pipeline_worker.py  vtk_pointcloud_viewer.py
src/aerial_terrestrial_registration/optimization/: graph_optimization.py  io.py  pose_graph.py
src/aerial_terrestrial_registration/registration/: graph.py  height_image.py  horizontal_alignment.py  icp.py  registration.py  registration_io.py  vertical_alignment.py
src/aerial_terrestrial_registration/utils/: arguments_io.py  cloud_io.py  cloud_processing.py  logger.py
src/digiforest_registration/: __init__.py  optimization.py  registration_script.py  tiling.py
src/digiforest_registration/baseline/: point_registration.py
src/digiforest_registration/gui/: __init__.py  image_viewer.py  log_tree_widget.py  main_window.py  main_window.ui  optimization_dialog.py  optimization_pipeline_worker.py  pipeline_worker.py  pointcloud_viewer.py  registration_dialog.py  registration_pipeline_worker.py  tile_viewer.py  vtk_pointcloud_viewer.py
src/digiforest_registration/optimization/: __init__.py  graph_optimization.py  io.py  optimize_graph.py  pose_graph.py  visualization.py
(+24 files in other folders)
