[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digiforest_registration"
version = "0.1.0"
description = "A Python package for digiforest registration"
authors = [
    { name = "Benoit Casseau", email = "benoit@robots.ox.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "wheel",
  "pre-commit",
  "gdown",
  "numpy",
  "scipy",
  "scikit-learn",
  "Cython",
  "matplotlib",
  "pandas",
  "seaborn",
  "shapely",
  "pyyaml",
  "ipympl",
  "open3d>=0.17.0",
  "pytest",
  "networkx",
  "opencv-python",
  "gtsam",
  "scikit-image",
  "trimesh",
  "PyQt5",
  "digiforest_analysis @ git+https://github.com/ori-drs/digiforest_drs.git@voronoi-segmentation-fix-install#subdirectory=digiforest_analysis",
]

[project.scripts]
registration_script = "digiforest_registration.registration_script:main"
optimization = "digiforest_registration.optimization:main"
registration_gui = "digiforest_registration.registration_gui:main"
tiling = "digiforest_registration.tiling:main"
