[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerial_terrestrial_registration"
version = "0.1.0"
description = "A Python package for digiforest registration"
authors = [
    { name = "Benoit Casseau", email = "benoit@robots.ox.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "wheel",
  "pre-commit",
  "gdown",
  "numpy",
  "scipy",
  "scikit-learn",
  "Cython",
  "matplotlib",
  "pandas",
  "seaborn",
  "shapely",
  "pyyaml",
  "ipympl",
  "open3d>=0.17.0",
  "pytest",
  "networkx",
  "opencv-python-headless",
  "gtsam",
  "scikit-image",
  "trimesh",
  "PyQt5",
  "vtk",
  "digiforest_analysis @ git+https://github.com/ori-drs/digiforest_drs.git@voronoi-segmentation-fix-install#subdirectory=digiforest_analysis",
]

[project.scripts]
registration_script = "aerial_terrestrial_registration.registration_script:main"
optimization = "aerial_terrestrial_registration.optimization:main"
registration_gui = "aerial_terrestrial_registration.registration_gui:main"
tiling = "aerial_terrestrial_registration.tiling:main"

[tool.setuptools.package-data]
aerial_terrestrial_registration = ["gui/*.ui"]